@@ -1,8 +1,10 @@
-CHANGES.txt - 08/21/2002
+CHANGES.txt - 08/22/2002
 ------------------------
 
 CHANGES IN CUPS V1.1.16
 
+	- The PostScript filter now detects EPS files and should
+	  better handle printing EPS files.
 	- The cancel command now ignores a trailing destination
 	  name when cancelling a specific job ID (Solaris
 	  compatibility).
